--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <nav class="navbar fixed-top navbar-expand-lg bg-dark" data-bs-theme="dark">
         <div class="container-fluid">
             <a class="navbar-brand text-light ms-5 d-flex align-items-center" href="#">
-                <img src="/img/codoacodo.png" alt="Logo" width="120" class="d-inline-block align-text-center">
+                <img src="./img/codoacodo.png" alt="Logo" width="120" class="d-inline-block align-text-center">
                 <p class="fw-semibold fs-6 mb-0 d-none d-sm-block d-xs-none">Conf Bs As</p>
             </a>
             <button class="navbar-toggler me-5" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -54,10 +54,20 @@
     <!-- CARRUSEL PRINCIPAL -->
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner position-relative">
-            <div class="carousel-item active bg-black" data-bs-interval="6000">
-                <img src="/img/ba1.jpg" class="disPeq d-block opacity-50 d-md-none" alt="...">
-                <img src="/img/ba1.jpg" class="d-md-block w-100 opacity-50 d-none" alt="...">
+            <div class="carousel-item active bg-black" data-bs-interval="5000">
+                <img src="./img/ba1.jpg" class="disPeq d-block opacity-50 d-md-none" alt="...">
+                <img src="./img/ba1.jpg" class="d-md-block w-100 opacity-50 d-none" alt="...">
             </div>
+            <div class="carousel-item bg-black" data-bs-interval="5000">
+                <img src="./img/ba2.jpg" class="disPeq d-block opacity-50 d-md-none" alt="...">
+                <img src="./img/ba2.jpg" class="d-md-block w-100 opacity-50 d-none" alt="...">
+            </div>
+            <div class="carousel-item bg-black" data-bs-interval="5000">
+                <img src="./img/ba3.jpg" class="disPeq d-block opacity-50 d-md-none" alt="...">
+                <img src="./img/ba3.jpg" class="d-md-block w-100 opacity-50 d-none" alt="...">
+            </div>
+
+
             <div
                 class="position-absolute top-50 end-0 translate-middle-y text-white text-end pe-0 pe-sm-5 me-5 col-lg-5 col-10">
                 <h5 class="fs-1 fs-md-4">Conf Bs As</h5>
@@ -68,12 +78,7 @@
                 <a href="#" class="btn btn-outline-light btn-sm btn-md">Quiero ser orador</a>
                 <a href="#" class="btn btn-success btn-sm btn-md">Comprar tickets</a>
             </div>
-            <!-- <div class="carousel-item" data-bs-interval="6000">
-            <img src="/img/ba2.jpg" class="d-block" alt="...">
-          </div>
-          <div class="carousel-item" data-bs-interval="6000">
-            <img src="/img/ba3.jpg" class="d-block" alt="...">
-          </div> -->
+
         </div>
     </div>
 
@@ -85,14 +90,14 @@
         </div>
         <div class="d-flex justify-content-center flex-wrap">
             <div class="card col-lg-3 col-md-4 col-sm-6 col-10">
-                <img src="/img/steve.jpg" class="card-img-top img-fluid rounded imgOrador" alt="...">
+                <img src="./img/steve.jpg" class="card-img-top img-fluid rounded imgOrador" alt="...">
                 <div class="card-body">
-                        <div class="badge bg-warning text-dark text-wrap">
-                            JavaScript
-                        </div>
-                        <div class="badge bg-info text-wrap">
-                            React
-                        </div>
+                    <div class="badge bg-warning text-dark text-wrap">
+                        JavaScript
+                    </div>
+                    <div class="badge bg-info text-wrap">
+                        React
+                    </div>
                     <h5 class="card-title">Steve Jobs</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et voluptatibus
                         perferendis delenitir totam fuga sequi iste! Facilis explicabo repellat ut similique incidunt?
@@ -100,7 +105,7 @@
                 </div>
             </div>
             <div class="card col-lg-3 col-md-4 col-sm-6 col-10 me-4 ms-4 mt-2 mb-2 mt-md-0 mb-md-0">
-                <img src="/img/bill.jpg" class="card-img-top img-fluid rounded imgOrador" alt="...">
+                <img src="./img/bill.jpg" class="card-img-top img-fluid rounded imgOrador" alt="...">
                 <div class="card-body">
                     <div class="badge bg-warning text-dark text-wrap">
                         JavaScript
@@ -115,7 +120,7 @@
                 </div>
             </div>
             <div class="card col-lg-3 col-md-4 col-sm-6 col-10">
-                <img src="/img/ada.jpeg" class="card-img-top img-fluid rounded imgOrador" alt="...">
+                <img src="./img/ada.jpeg" class="card-img-top img-fluid rounded imgOrador" alt="...">
                 <div class="card-body">
                     <div class="badge bg-secondary text-wrap">
                         Negocios
@@ -136,7 +141,7 @@
     <div class="card mb-3 mt-3" style="width: 100%;">
         <div class="row g-0">
             <div class="col-md-6">
-                <img src="/img/honolulu.jpg" class="img-fluid h-100" alt="...">
+                <img src="./img/honolulu.jpg" class="img-fluid h-100" alt="...">
             </div>
             <div class="col-md-6 bg-dark">
                 <div class="card-body m-3">
