--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Codo a Codo</title>
+    <title>Proyecto Julian</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -20,7 +20,7 @@
     <!-- BARRA DE NAVEGACION -->
     <nav class="navbar fixed-top navbar-expand-lg bg-dark" data-bs-theme="dark">
         <div class="container-fluid">
-            <a class="navbar-brand text-light ms-5 d-flex align-items-center" href="#">
+            <a class="navbar-brand text-light ms-5 d-flex align-items-center" href="index.html">
                 <img src="./img/codoacodo.png" alt="Logo" width="120" class="d-inline-block align-text-center">
                 <p class="fw-semibold fs-6 mb-0 d-none d-sm-block d-xs-none">Conf Bs As</p>
             </a>
@@ -44,7 +44,7 @@
                         <a class="nav-link" href="#">Conviértete en orador</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-success" href="#">Comprar tickets</a>
+                        <a class="nav-link text-success" href="comprar.html">Comprar tickets</a>
                     </li>
                 </ul>
             </div>
@@ -192,6 +192,7 @@
         <button class="btn btn-success col-12">Enviar</button>
     </div>
 
+    
     <!-- FOOTER -->
     <ul class="footer nav justify-content-center mt-4 pt-3 pb-3">
         <li class="nav-item">
