--- a/comprar.html
+++ b/comprar.html
@@ -95,7 +95,7 @@
                     <input type="number" class="form-control" id="formControlCantidad" placeholder="Cantidad">
                 </div>
                 <div class="mb-3 col-sm-6">
-                    <label for="formControlCategoria" class="form-label">Cantidad</label>
+                    <label for="formControlCategoria" class="form-label">Categoria</label>
                     <select class="form-control" id="formControlCategoria" aria-label="1">
                         <option selected>Estudiante</option>
                         <option value="2">Trainee</option>
@@ -112,8 +112,8 @@
             </div>
 
             <div class="d-flex justify-content-center">
-                <button type="button" class="btn btn-success btn-sm me-2 w-50">Borrar</button>
-                <button type="button" class="btn btn-success btn-sm ms-2 w-50">Resumen</button>
+                <button type="button" class="btn btn-success me-2 w-50">Borrar</button>
+                <button type="button" class="btn btn-success ms-2 w-50">Resumen</button>
             </div>
         </form>
     </div>
