--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <a class="nav-link" href="#">Conviértete en orador</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-success" href="comprar.html">Comprar tickets</a>
+                        <a class="nav-link text-success" href="./comprar.html">Comprar tickets</a>
                     </li>
                 </ul>
             </div>
@@ -76,7 +76,7 @@
                     Internet. Ven a conocer a miembros del evento, a otros estudiantes de Codo a Codo y los oradores de
                     primer nivel que tenemos para ti. Te esperamos!</p>
                 <a href="#" class="btn btn-outline-light btn-sm btn-md">Quiero ser orador</a>
-                <a href="#" class="btn btn-success btn-sm btn-md">Comprar tickets</a>
+                <a href="./comprar.html" class="btn btn-success btn-sm btn-md">Comprar tickets</a>
             </div>
 
         </div>
