--- a/comprar.html
+++ b/comprar.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -80,14 +80,14 @@
         <form class="mt-3 container" action="#">
             <div class="row justify-content-center">
                 <div class="mb-3 col-sm-6">
-                    <input type="text" class="form-control" placeholder="Nombre">
+                    <input type="text" id="formControlNombre" class="form-control" placeholder="Nombre">
                 </div>
                 <div class="mb-3 col-sm-6">
-                    <input type="text" class="form-control" placeholder="Apellido">
+                    <input type="text" id="formControlApellido" class="form-control" placeholder="Apellido">
                 </div>
             </div>
             <div class="form col-sm-12">
-                <input type="email" class="form-control" placeholder="Correo">
+                <input type="email" id="formControlCorreo" class="form-control" placeholder="Correo">
             </div>
             <div class="mt-3 row justify-content-center">
                 <div class="mb-3 col-sm-6">
@@ -98,8 +98,8 @@
                     <label for="formControlCategoria" class="form-label">Categoria</label>
                     <select class="form-control" id="formControlCategoria" aria-label="1">
                         <option selected>Estudiante</option>
-                        <option value="2">Trainee</option>
-                        <option value="3">Junior</option>
+                        <option value="Trainee">Trainee</option>
+                        <option value="Junior">Junior</option>
                     </select>
                 </div>
             </div>
@@ -107,13 +107,13 @@
             <div class="mb-4 mt-2 rounded" style="background-color: #cce5ff;">
                 <div class="d-flex pt-2 pb-2">
                     <span class="fs-6 fw-normal text-end ms-4" style="color:#004884">Total a pagar: $</span>
-                    <span class="fw-semibold fs-6" style="color:#004884">100</span>
+                    <span id="totalPagarSpan" class="fw-semibold fs-6" style="color:#004884"></span>
                 </div>
             </div>
 
             <div class="d-flex justify-content-center">
-                <button type="button" class="btn btn-success me-2 w-50">Borrar</button>
-                <button type="button" class="btn btn-success ms-2 w-50">Resumen</button>
+                <button type="button" id="borrarButton" class="btn btn-success me-2 w-50">Borrar</button>
+                <button type="button" id="resumenButton" class="btn btn-success ms-2 w-50">Resumen</button>
             </div>
         </form>
     </div>
@@ -144,6 +144,8 @@
         </li>
     </ul>
 
+
+    <script src="./script.js"></script>
 
 </body>
 
