--- a/comprar.html
+++ b/comprar.html
@@ -32,7 +32,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav me-5">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#">La conferencia</a>
+                        <a class="nav-link" aria-current="page" href="index.html">La conferencia</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Los oradores</a>
